feat(adapters): add Binance and simulated market data adapters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "python-dotenv>=1.0.0",
     "structlog>=23.2.0",
+    "ccxt>=4.1.0",
+    "pandas>=2.1.0",
+    "aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
